Fixed overlap on footer

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ textarea {
 
 /* FOOTER */
 footer {
-  position: fixed;
+  position: static;
   bottom: 0;
   font-size: 0.8rem;
   opacity: 0.7;
